# my_own_shop_site

./: .env  .gitignore  lol.py  pyproject.toml  requirements.txt  run.py  run_backend.py  test.db
backend/: app.py
backend/db/: __init__.py
backend/db/models/: __init__.py  gift_cards.py  shop.py  union.py  user.py
backend/routes/: __init__.py  gift_cards.py  google.py  shop.py  user.py
backend/schemas/: __init__.py  gift_cards.py  shop.py  user.py
backend/utils/: __init__.py  oauth2.py
frontend/: app.py  run_frontend.py
frontend/db/models/: user_model.py
frontend/forms/: __init__.py  email.py  login.py  register.py
frontend/routes/: __init__.py  bag.py  cloth_info.py  cloth_type.py  gift_cards.py  index.py  login.py
frontend/static/: bag.css  bottom.css  cloth_info.css  cloth_type.css  form.css  gift_cards.css  index.css  navbar.css
frontend/templates/: __bottom.html  __navbar.html  bag.html  cloth-info.html  cloth-type.html  email.html  gift-cards.html  index.html  login.html  navbar.html  register.html  test-google.html
