[project]
name = "my-site"
version = "0.1.0"
description = ""
authors = [
    {name = "prerreslin",email = "sanyatop011209@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types (>=0.7.0,<0.8.0)",
    "anyio (>=4.8.0,<5.0.0)",
    "asgiref (>=3.8.1,<4.0.0)",
    "authlib (>=1.4.1,<2.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "blinker (>=1.9.0,<2.0.0)",
    "cachetools (>=5.5.1,<6.0.0)",
    "certifi (>=2025.1.31,<2026.0.0)",
    "cffi (>=1.17.1,<2.0.0)",
    "charset-normalizer (>=3.4.1,<4.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "colorama (>=0.4.6,<0.5.0)",
    "cryptography (>=44.0.0,<45.0.0)",
    "dnspython (>=2.7.0,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "fastapi-cli (>=0.0.7,<0.0.8)",
    "flask (>=3.1.0,<4.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "google-api-core (>=2.24.1,<3.0.0)",
    "google-api-python-client (>=2.160.0,<3.0.0)",
    "google-auth (>=2.38.0,<3.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth-oauthlib (>=1.2.1,<2.0.0)",
    "googleapis-common-protos (>=1.66.0,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "h11 (>=0.14.0,<0.15.0)",
    "httpcore (>=1.0.7,<2.0.0)",
    "httplib2 (>=0.22.0,<0.23.0)",
    "httptools (>=0.6.4,<0.7.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "idna (>=3.10,<4.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "markdown-it-py (>=3.0.0,<4.0.0)",
    "markupsafe (>=3.0.2,<4.0.0)",
    "mdurl (>=0.1.2,<0.2.0)",
    "oauthlib (>=3.2.2,<4.0.0)",
    "proto-plus (>=1.26.0,<2.0.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "pyasn1 (>=0.6.1,<0.7.0)",
    "pyasn1-modules (>=0.4.1,<0.5.0)",
    "pycparser (>=2.22,<3.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.28.0,<3.0.0)",
    "pygments (>=2.19.1,<3.0.0)",
    "pyparsing (>=3.2.1,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "requests-oauthlib (>=2.0.0,<3.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "rich-toolkit (>=0.13.2,<0.14.0)",
    "shellingham (>=1.5.4,<2.0.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "starlette (>=0.45.3,<0.46.0)",
    "typer (>=0.15.1,<0.16.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "uritemplate (>=4.1.1,<5.0.0)",
    "urllib3 (>=2.3.0,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "watchfiles (>=1.0.4,<2.0.0)",
    "websockets (>=14.2,<15.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "wtforms (>=3.2.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
